gitops/frontend/overlays/dts-dev-sced-rhp-spoke-aks/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canada-dental-care-plan-frontend
  labels:
    app.kubernetes.io/name: canada-dental-care-plan-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: canada-dental-care-plan-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: canada-dental-care-plan-frontend
    spec:
      containers:
        - name: canada-dental-care-plan-frontend
          image: dtsrhpdevscedacr.azurecr.io/canada-dental-care-plan/canada-dental-care-plan-frontend
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
