gitops/frontend/overlays/dts-dev-sced-rhp-spoke-aks/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canada-dental-care-plan-frontend
  labels:
    app.kubernetes.io/name: canada-dental-care-plan-frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: canada-dental-care-plan-frontend
